diun.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diun
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: diun
  name: diun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diun
  template:
    metadata:
      labels:
        app: diun
      annotations:
        diun.enable: "true"
    spec:
      serviceAccountName: diun
      containers:
        - name: diun
          image: crazymax/diun:latest
          imagePullPolicy: Always
          args: ["serve"]

          volumeMounts:
            - mountPath: "/data"
              name: "data"
            - name: config-volume
              mountPath: /etc/diun
      restartPolicy: Always
      volumes:
        # Set up a data directory for diun
        # For production usage, you should consider using PV/PVC instead(or simply using storage like NAS)
        # For more details, please see https://kubernetes.io/docs/concepts/storage/volumes/
        - name: "data"
          hostPath:
            path: "/data/diun"
            type: Directory
        - name: config-volume
          configMap:
            name: diun-config
