hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: hello.borkowskij.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-project
            port:
              number: 80
  tls:
  - hosts:
    - myhomeapp.example.com
    secretName: myhomeapp-cert
